fixed auntication
fixed a bug in the Oauth 2.0
